k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erpstock
  labels:
    app.kubernetes.io/part-of: erpstock
